Fixed bug overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ button.navbar-toggler {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 99vw;
     height: 100vh;
 }
 
